--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "env": "^0.0.2",
     "express": "^4.18.2",
     "mysql2": "^3.9.0",
+    "node-pre-gyp": "^0.17.0",
     "sequelize": "^6.35.2",
     "uuid": "^9.0.1"
   }
