--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -8,11 +8,11 @@ on:
 jobs:
   build:
     name: integration-test
-    runs-on: ubuntu-latestss
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v237
+      uses: actions/checkout@v2
 
     - name: Set up Node.js
       uses: actions/setup-node@v3
@@ -22,7 +22,7 @@ jobs:
     - name: Setup Environment Variables
       run: |
         touch .env
-        echo "MYSQL_DATABASE=${{vars.MYSQL_DATABASE}}" >> .env
+        echo "MYSQL_DATABASE=${{vars.MYSQL_DATABASEs}}" >> .env
         echo "MYSQL_PASSWORD=${{vars.MYSQL_PASSWORD}}" >> .env
         echo "MYSQL_USER=arpita" >> .env
 
