--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -22,12 +22,12 @@ jobs:
     - name: Setup Environment Variables
       run: |
         touch .env
-        echo "MYSQL_DATABASE=${{vars.MYSQL_DATABASEs}}" >> .env
+        echo "MYSQL_DATABASE=${{vars.MYSQL_DATABASE}}" >> .env
         echo "MYSQL_PASSWORD=${{vars.MYSQL_PASSWORD}}" >> .env
         echo "MYSQL_USER=arpita" >> .env
 
     - name: Set up MySQL
-      uses: ankane/setup-mariadb@v1345
+      uses: ankane/setup-mariadb@v1
       with:
         database: ${{vars.MYSQL_DATABASE}}
 
