--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -40,4 +40,7 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Run the integration test
+      run: npm test
+
    
