--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --experimental-specifier-resolution=node ./src/test.js"
   },
   "keywords": [
     "node",
@@ -22,9 +22,14 @@
     "dotenv": "^16.4.1",
     "env": "^0.0.2",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "mysql2": "^3.9.0",
-    "node-pre-gyp": "^0.17.0",
     "sequelize": "^6.35.2",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "chai": "^5.1.0",
+    "mocha": "^10.3.0",
+    "supertest": "^6.3.4"
   }
 }
