--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -36,7 +36,10 @@ jobs:
         sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "CREATE USER 'arpita'@localhost IDENTIFIED BY '${{vars.MYSQL_PASSWORD}}';"
         sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "GRANT ALL PRIVILEGES ON ${{vars.MYSQL_DATABASE}}.* TO 'arpita'@localhost;"
         sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "FLUSH PRIVILEGES;"
-
+    - name: Create Database Table
+      run: |
+        sudo mysql -D ${{ vars.MYSQL_DATABASE }} -e "CREATE TABLE IF NOT EXISTS \`user\` (...);"
+      
     - name: Install dependencies
       run: npm install
 
