--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,4 +1,4 @@
-name: integration-test
+name: webapp-build
 
 on:
   pull_request:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: integration-test
+    name: webapp-build
     runs-on: ubuntu-latest
 
     steps:
@@ -18,6 +18,9 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '16'
+
+    - name: Packer fmt check
+      run: packer fmt -check
 
     - name: Setup Environment Variables
       run: |
@@ -37,12 +40,12 @@ jobs:
         sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "GRANT ALL PRIVILEGES ON ${{vars.MYSQL_DATABASE}}.* TO 'arpita'@localhost;"
         sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "FLUSH PRIVILEGES;"
 
+    - name: Packer validate
+      run: packer validate packer-image.json
       
     - name: Install dependencies
       run: npm install
 
-    - name: Run the integration test
-      run: npm test
 
       
    
