--- a/.github/workflows/github-test.yml
+++ b/.github/workflows/github-test.yml
@@ -14,5 +14,13 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+      
+    - name: Install dependencies
+      run: npm install
+
     - name: Run the integration test
       run: npm test
