--- a/.github/workflows/github-packervalidate.yml
+++ b/.github/workflows/github-packervalidate.yml
@@ -14,14 +14,20 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
-    - name: Set up Google Cloud credentials
-      run: echo "${{ secrets.GCP_ACCOUNT_JSON }}" > account-gcp.json
+    - name: Setting up `packer`
+      uses: hashicorp/setup-packer@main
+      id: setup
+      with:
+          version: "latest"
+
+    # - name: Set up Google Cloud credentials
+    #   run: echo "${{ secrets.GCP_ACCOUNT_JSON }}" > account-gcp.json
 
     - name: Packer init
       run: packer init .
 
-    - name: Packer formmater
-      run: packer fmt .
+    # - name: Packer formmater
+    #   run: packer fmt .
 
     - name: Packer fmt check
       run: packer fmt -check .
