--- a/.github/workflows/github-test.yml
+++ b/.github/workflows/github-test.yml
@@ -19,8 +19,26 @@ jobs:
       with:
         node-version: '16'
       
+    - name: Setup Environment Variables
+      run: |
+          touch .env
+          echo "MYSQL_DATABASE=${{vars.MYSQL_DATABASE}}" >> .env
+          echo "MYSQL_PASSWORD=${{vars.MYSQL_PASSWORD}}" >> .env
+          echo "MYSQL_USER=arpita" >> .env        
+  
+    - name: Set up MySQL
+      uses: ankane/setup-mariadb@v1
+      with:
+          database: ${{vars.MYSQL_DATABASE}}
+  
+    - name: Creating DB User
+      run: |
+          sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "CREATE USER 'arpita'@localhost IDENTIFIED BY '${{vars.MYSQL_PASSWORD}}';"
+          sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "GRANT ALL PRIVILEGES ON ${{vars.MYSQL_DATABASE}}.* TO 'arpita'@localhost;"
+          sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "FLUSH PRIVILEGES;"
+        
     - name: Install dependencies
       run: npm install
-
+  
     - name: Run the integration test
       run: npm test
