--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
+    "start": "node src/app.js",
     "test": "mocha --experimental-specifier-resolution=node ./src/test.js"
   },
   "keywords": [
