--- a/.github/workflows/github-test.yml
+++ b/.github/workflows/github-test.yml
@@ -18,33 +18,31 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '16'
-      
+
     - name: Setup Environment Variables
       run: |
-          touch .env
-          echo "MYSQL_DATABASE=${{vars.MYSQL_DATABASE}}" >> .env
-          echo "MYSQL_PASSWORD=${{vars.MYSQL_PASSWORD}}" >> .env
-          echo "MYSQL_USER=arpita" >> .env        
-  
+        touch .env
+        echo "MYSQL_DATABASE=${{vars.MYSQL_DATABASE}}" >> .env
+        echo "MYSQL_PASSWORD=${{vars.MYSQL_PASSWORD}}" >> .env
+        echo "MYSQL_USER=arpita" >> .env        
+
     - name: Set up MySQL
       uses: ankane/setup-mariadb@v1
       with:
-          database: ${{vars.MYSQL_DATABASE}}
-  
+        database: ${{vars.MYSQL_DATABASE}}
+
     - name: Creating DB User
       run: |
-          sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "CREATE USER 'arpita'@localhost IDENTIFIED BY '${{vars.MYSQL_PASSWORD}}';"
-          sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "GRANT ALL PRIVILEGES ON ${{vars.MYSQL_DATABASE}}.* TO 'arpita'@localhost;"
-          sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "FLUSH PRIVILEGES;"
-        
+        sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "CREATE USER 'arpita'@localhost IDENTIFIED BY '${{vars.MYSQL_PASSWORD}}';"
+        sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "GRANT ALL PRIVILEGES ON ${{vars.MYSQL_DATABASE}}.* TO 'arpita'@localhost;"
+        sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "FLUSH PRIVILEGES;"
+
+      
     - name: Install dependencies
       run: npm install
-  
+
     - name: Run the integration test
-      run: |
-        npm test
-        exit_code=$?
-        if [ $exit_code -ne 0 ]; then
-        echo "Error: Integration test failed with exit code $exit_code"
-        exit $exit_code
-        fi
+      run: npm test
+
+      
+   
