--- a/.github/workflows/github-test.yml
+++ b/.github/workflows/github-test.yml
@@ -42,13 +42,7 @@ jobs:
       run: npm install
 
     - name: Run the integration test
-      run: |
-        npm test
-        exit_code=$?
-        if [ $exit_code -ne 0 ]; then
-          echo "Error: Integration test failed with exit code $exit_code"
-          exit $exit_code
-        fi
+      run: npm test
 
       
    
