--- a/webapp.service
+++ b/webapp.service
@@ -11,7 +11,7 @@ Restart=always
 RestartSec=500ms
 StartLimitInterval=0
 WorkingDirectory=/opt/csye6225dir
-ExecStart=/usr/bin/npm run dev
+ExecStart=/usr/bin/npm run start
 
 [Install]
 WantedBy=cloud-init.target
