--- a/.github/workflows/github-deploy.yml
+++ b/.github/workflows/github-deploy.yml
@@ -14,31 +14,31 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '16'
+    # - name: Set up Node.js
+    #   uses: actions/setup-node@v3
+    #   with:
+    #     node-version: '16'
 
-    - name: Setup Environment Variables
-      run: |
-        touch .env
-        echo "MYSQL_DATABASE=${{vars.MYSQL_DATABASE}}" >> .env
-        echo "MYSQL_PASSWORD=${{vars.MYSQL_PASSWORD}}" >> .env
-        echo "MYSQL_USER=arpita" >> .env        
+    # - name: Setup Environment Variables
+    #   run: |
+    #     touch .env
+    #     echo "MYSQL_DATABASE=${{vars.MYSQL_DATABASE}}" >> .env
+    #     echo "MYSQL_PASSWORD=${{vars.MYSQL_PASSWORD}}" >> .env
+    #     echo "MYSQL_USER=arpita" >> .env        
 
-    - name: Set up MySQL
-      uses: ankane/setup-mariadb@v1
-      with:
-        database: ${{vars.MYSQL_DATABASE}}
+    # - name: Set up MySQL
+    #   uses: ankane/setup-mariadb@v1
+    #   with:
+    #     database: ${{vars.MYSQL_DATABASE}}
 
-    - name: Creating DB User
-      run: |
-        sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "CREATE USER 'arpita'@localhost IDENTIFIED BY '${{vars.MYSQL_PASSWORD}}';"
-        sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "GRANT ALL PRIVILEGES ON ${{vars.MYSQL_DATABASE}}.* TO 'arpita'@localhost;"
-        sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "FLUSH PRIVILEGES;"
+    # - name: Creating DB User
+    #   run: |
+    #     sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "CREATE USER 'arpita'@localhost IDENTIFIED BY '${{vars.MYSQL_PASSWORD}}';"
+    #     sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "GRANT ALL PRIVILEGES ON ${{vars.MYSQL_DATABASE}}.* TO 'arpita'@localhost;"
+    #     sudo mysql -D ${{vars.MYSQL_DATABASE}} -e "FLUSH PRIVILEGES;"
       
-    - name: Install dependencies
-      run: npm install
+    # - name: Install dependencies
+    #   run: npm install
       
     - name: Making zip of the project
       run: zip -r webapp.zip .
