--- a/.github/workflows/github-packervalidate.yml
+++ b/.github/workflows/github-packervalidate.yml
@@ -20,6 +20,9 @@ jobs:
       with:
           version: "latest"
 
+    - name: Making zip of the project
+      run: zip -r webapp.zip .
+
     # - name: Set up Google Cloud credentials
     #   run: echo "${{ secrets.GCP_ACCOUNT_JSON }}" > account-gcp.json
 
