--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node src/app.js",
-    "test": "mocha --experimental-specifier-resolution=node ./src/test.js"
+    "test": "mocha --experimental-specifier-resolution=node ./src/test.js --exit"
   },
   "keywords": [
     "node",
