--- a/webapp.service
+++ b/webapp.service
@@ -1,7 +1,7 @@
 [Unit]
 Description="Node Js Webapp 6225 Service"
 After=network.target
-Wants=postgresd.service
+ConditionPathExists=/opt/csye6225
 
 [Service]
 EnvironmentFile=/opt/csye6225dir/.env
