--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "jest": "^29.7.0",
     "mysql2": "^3.9.0",
     "sequelize": "^6.35.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.12.0"
   },
   "devDependencies": {
     "chai": "^5.1.0",
