--- a/config.yaml
+++ b/config.yaml
@@ -11,9 +11,20 @@ logging:
       type: parse_json
       time_key: timestamp 
       time_format: "YYYY-MM-DD hh:mm:ss A"  
+    move_severity:
+      type: modify_fields
+      fields:
+        severity:
+          move_from: jsonPayload.severity
+    extract_structure:
+      type: parse_regex
+      field: message
+      regex: "^(?<time>[\d-]*T[\d:.Z]*) (?<severity>[^ ]*) (?<file>[^ :]*):(?<line>[\d]*) - (?<message>(.|\\n)*)$"
+      time_key: time
+      time_format: "%Y-%m-%dT%H:%M:%S.%L"
 
   service:
     pipelines:
       default_pipeline:
         receivers: [my-app-receiver]
-        processors: [my-app-processor]
+        processors: [my-app-processor, move_severity, extract_structure]
