--- a/config.yaml
+++ b/config.yaml
@@ -19,9 +19,10 @@ logging:
     extract_structure:
       type: parse_regex
       field: message
-      regex: "^(?<time>[\d-]*T[\d:.Z]*) (?<severity>[^ ]*) (?<file>[^ :]*):(?<line>[\d]*) - (?<message>(.|\\n)*)$"
-      time_key: time
-      time_format: "%Y-%m-%dT%H:%M:%S.%L"
+      regex: "^\[(?<timestamp>[^\]]+)\] \[(?<severity>[^\]]+)\] \[(?<logger>[^\]]+)\] (?<message>.*)$"
+      time_key: timestamp
+      time_format: "%Y/%m/%d %H:%M:%S"
+      severity_key: severity # Specify the key for severity extraction
 
   service:
     pipelines:
