--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ logging:
     my-app-processor:
       type: parse_json
       time_key: timestamp 
-      time_format: "YYYY-MM-DD hh:mm:ss A"  
+      time_format: "%Y-%m-%dT%H:%M:%S"  
     move_severity:
       type: modify_fields
       fields:
