--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
   "author": "Arpita Rai",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/pubsub": "^4.3.3",
     "basic-auth": "^2.0.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.1",
     "env": "^0.0.2",
     "express": "^4.18.2",
     "jest": "^29.7.0",
+    "moment": "^2.30.1",
     "mysql2": "^3.9.0",
     "sequelize": "^6.35.2",
     "uuid": "^9.0.1",
