with image name

--- a/.github/workflows/github-deploy.yml
+++ b/.github/workflows/github-deploy.yml
@@ -86,7 +86,7 @@ jobs:
     - name: Extract Image Name
       id: extract-image-name
       run: |
-            IMAGE_ID=$(grep -oP 'A disk image was created in the \'\*\*\*\' project: (\S+)' <<< "${{ steps.build-packer.outputs.packer-build-output }}")
+            IMAGE_ID=$(grep -oP 'A disk image was created in the .+ project: (\S+)' <<< "${{ steps.build-packer.outputs.packer-build-output }}")
             IMAGE_NAME="projects/dev-gcp-414704/global/images/$IMAGE_ID"
             echo "::set-output name=image-id::$IMAGE_NAME"
           
