--- a/.github/workflows/github-deploy.yml
+++ b/.github/workflows/github-deploy.yml
@@ -72,7 +72,7 @@ jobs:
       run: |
         PACKER_OUTPUT=$(packer build .)
         echo "$PACKER_OUTPUT"
-        IMAGE_ID=$(echo "$PACKER_OUTPUT" | grep -oP "A disk image was created in the '***' project: \K\w+-\w+-\w+-\w+-\w+")
+        IMAGE_ID=$(echo "$PACKER_OUTPUT" | sed -nE "s/A disk image was created in the '([^']+)' project: (\w+-\w+-\w+-\w+-\w+-\w+-\w+-\w+-\w+-\w+-\w+)/\2/p")
         echo "IMAGE_ID=$IMAGE_ID"
         IMAGE_NAME="projects/dev-gcp-414704/global/images/$IMAGE_ID"
         echo "::set-output name=image-id::$IMAGE_NAME"
