--- a/.github/workflows/github-deploy.yml
+++ b/.github/workflows/github-deploy.yml
@@ -75,8 +75,7 @@ jobs:
         IMAGE_ID=$(echo "$PACKER_OUTPUT" | grep 'A disk image was created' | grep -oP 'webapp-packer-image-\d+-\d+-\d+-\d+-\d+-\d+')
         echo "IMAGE_ID=$IMAGE_ID"
         IMAGE_NAME="projects/dev-gcp-414704/global/images/$IMAGE_ID"
-        echo "::set-output name=IMAGE_NAME::$IMAGE_NAME"
-
+        echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_OUTPUT
       #////////////////////////////////assignment #9 /////////////////////////////////////////////
 
           
@@ -159,7 +158,7 @@ jobs:
               --machine-type=e2-medium \
               --instance-template-region=us-east4 \
               --tags=web-application \
-              --image=$IMAGE_NAME \
+              --image=${{steps.build.outputs.IMAGE_NAME}} \
               --boot-disk-size=100 \
               --network=projects/${{ secrets.PROJECT_ID }}/global/networks/${{ env.NETWORK_NAME }} \
               --subnet=projects/${{ secrets.PROJECT_ID }}/regions/us-east4/subnetworks/${{ env.SUBNETWORK_NAME }} \
@@ -167,7 +166,7 @@ jobs:
               --service-account=vm-service-account@dev-gcp-414704.iam.gserviceaccount.com \
               --scopes=https://www.googleapis.com/auth/cloud-platform \
               --metadata=startup-script="${METADATA}"
-
+              
     - name:  Managed Instance Group with new instance templae
       run: |
                 # Set the project ID in gcloud configuration
